# stylus-popup

./: .gitignore  CMakeLists.txt  colortheme.cpp  colortheme.h  main.cpp  popupwidget.cpp  popupwidget.h  stylusmonitor.cpp  stylusmonitor.h  waylandlayersurface.cpp  waylandlayersurface.h
packaging/: build-rpm.sh  stylus-popup.service  stylus-popup.spec
protocols/: wlr-layer-shell-unstable-v1.xml
